updated open api schemas
